--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ subtitle: ''
 description: 'keep walking'
 keywords:
 author: 夏晓文
-language: zh
-timezone: 'shanghai'
+language: zh-CN
+# timezone: 'shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
@@ -63,7 +63,7 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 20
   order_by: -date
 
 # Category & Tag
@@ -86,12 +86,12 @@ updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 0
 pagination_dir: page
 
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
-include:
+include: _config.pure.yml
 exclude:
 ignore:
 
