--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -184,23 +184,17 @@ fb_app_id:
 # profile
 profile:
   enabled: true # Whether to show profile bar
-  avatar: images/avatar.jpg
+  avatar: images/avatar.png
   gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
-  author: 昵称
-  author_title: Web Developer & Designer
-  author_description: 个人简介。
-  location: Shenzhen, China
-  follow: https://github.com/cofess
+  author: 夏晓文
+  author_title: Developer
+  author_description: Git 开发
+  location: HangZhou, China
+  follow: https://github.com/xiaowenxia
   # Social Links
   social:
     links:
-      github: https://github.com/cofess
-      weibo: http://weibo.com/cofess
-      twitter: https://twitter.com/iwebued
-      # facebook: /
-      # dribbble: /
-      behance: https://www.behance.net/cofess
-      rss: atom.xml
+      github: https://github.com/xiaowenxia
     link_tooltip: true # enable the social link tooltip, options: true, false
   # My Skills 
   skills:
@@ -213,11 +207,7 @@ profile:
     平面设计: ★★★☆☆
   # My Personal Links
   links:
-    Github: https://github.com/cofess
-    Blog: http://blog.cofess.com
-    微博: http://weibo.com/cofess
-    花瓣: http://huaban.com/cofess
-    Behance: https://www.behance.net/cofess
+    Github: https://github.com/xiaowenxia
   # My Personal Labels
   labels:
     - 前端
