--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ branches:
 before_install:
   - npm install hexo -g
   - git clone --recursive https://github.com/xiaowenxia/git-inside.git -b xiaowenxia.github.io/git-inside
-  - cd git-inside
 script:
-  - ./fetch.sh
+  - ./git-inside/fetch.sh
+  - cd git-inside/
   - hexo generate # generate static files
 deploy:
   provider: pages
