--- a/_config.pure.yml
+++ b/_config.pure.yml
@@ -6,12 +6,12 @@ config:
 menu:
   Home: . 
   Archives: archives # 归档
-  Categories: categories # 分类
-  Tags: tags # 标签
-  Repository: repository # github repositories
-  Books: books     # 书单
-  Links: links # 友链
-  About: about # 关于
+  # Categories: categories # 分类
+  # Tags: tags # 标签
+  # Repository: repository # github repositories
+  # Books: books     # 书单
+  # Links: links # 友链
+  # About: about # 关于
 
 # 导航菜单图标（font awesome）
 menu_icons:
