update theme config

--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -2,12 +2,12 @@
 menu:
   Home: .
   Archives: archives  # 归档
-  Categories: categories  # 分类
-  Tags: tags  # 标签
-  Repository: repository  # github repositories
-  Books: books  # 豆瓣书单
-  Links: links  # 友链
-  About: about  # 关于
+  # Categories: categories  # 分类
+  # Tags: tags  # 标签
+  # Repository: repository  # github repositories
+  # Books: books  # 豆瓣书单
+  # Links: links  # 友链
+  # About: about  # 关于
 
 # Enable/Disable menu icons
 menu_icons:
